<resources>
    <string name="app_name">Instagram</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cpassword">Confirm Password</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_already_accoumt">Already have an account</string>
    <string name="str_donot_account">Don\'t have an account</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_upload">Upload</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_profile">Profile</string>
    <string name="str_caption">Write a caption</string>
    <string name="str_follow">Folllow</string>
    <string name="str_following">Folllowing</string>
    <string name="str_followers">Folllowers</string>
    <string name="str_posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_name">Odilbek_79</string>
    <string name="str_time">February 2, 2021</string>
    <string name="str_caption_post">People-centric and expressive, with a new controls space and more privacy features.
Extend your apps with conversation notifications and bubbles, try one-time permissions, surface devices and media in the controls.</string>
    <string name="str_odilbek_79">odilbek_79</string>
    <string name="str_email_text">odilbek79@gmail.com</string>
    <string name="str_profile_name">Rustamov Odilbek</string>

    <string name="str_signin_success">Signed in Successfully</string>
    <string name="str_signin_failed">Signed in failed</string>
    <string name="str_signup_success">Signed up successfully</string>
    <string name="str_signup_failed">Signed up failed</string>


    <string name="str_cancel">Cancel</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_delete_post">Do you want to delete this post?</string>
</resources>