<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:padding="2dp"
            android:src="@drawable/iv_percon"
            app:shapeAppearanceOverlay="@style/circle"
            app:strokeColor="@color/app_color_2"
            app:strokeWidth="2dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_odilbek_79"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_email_text"
                android:textColor="@color/black"
                android:textSize="13sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_follow"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_rounded_corners"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/str_follow"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>